--- a/config.json
+++ b/config.json
@@ -11,8 +11,8 @@
 		"cert_path": "example.crt",
 		"key_path": "example.key"
 	},
-	"db_name": "sqlite3",
-	"db_path": "gophish.db",
+	"db_name": "mysql",
+	"db_path": "mysql://root:hellodb123@/gophish",
 	"migrations_prefix": "db/db_",
 	"contact_address": "",
 	"logging": {
